--- a/qt_development/ImageProject/mainwindow.ui
+++ b/qt_development/ImageProject/mainwindow.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>160</y>
+      <y>230</y>
       <width>300</width>
       <height>300</height>
      </rect>
@@ -54,7 +54,7 @@
      <rect>
       <x>270</x>
       <y>60</y>
-      <width>114</width>
+      <width>131</width>
       <height>32</height>
      </rect>
     </property>
@@ -101,7 +101,7 @@
      <string>3</string>
     </property>
     <property name="maxLength">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="placeholderText">
      <string>Number Matrix</string>
@@ -110,8 +110,8 @@
    <widget class="QLabel" name="imgConvo">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>160</y>
+      <x>600</x>
+      <y>230</y>
       <width>300</width>
       <height>300</height>
      </rect>
@@ -120,17 +120,102 @@
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="histogram">
+   <widget class="QPushButton" name="polinomial">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>430</x>
+      <y>60</y>
+      <width>161</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Polinomial</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_1">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>90</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_2">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>90</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_3">
+    <property name="geometry">
+     <rect>
+      <x>540</x>
+      <y>90</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>200</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Input Image</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>200</y>
+      <width>91</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Output Image</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="outputAlg">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>200</y>
+      <width>221</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="dft">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
       <y>60</y>
       <width>114</width>
       <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>Histogram</string>
+     <string>DFT</string>
     </property>
    </widget>
   </widget>
